--- a/LANPaint Server/MainServer.xaml
+++ b/LANPaint Server/MainServer.xaml
@@ -1,8 +1,13 @@
 ﻿<Window x:Class="LANPaint_Server.MainServer"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Server" Height="378.464" Width="591.416" ResizeMode="CanMinimize">
+        Title="Server" Height="378.464" Width="720.28" ResizeMode="CanMinimize">
     <Grid>
-        <InkCanvas x:Name="mainCanvas" Margin="10" IsEnabled="False" Background="#FFE8E8E8"></InkCanvas>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <InkCanvas x:Name="mainCanvas" Margin="10,10,9.403,10" IsEnabled="False" Background="#FFE8E8E8"></InkCanvas>
+        <ListBox x:Name="clientsListBox" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
     </Grid>
 </Window>
