--- a/LANPaint Server/BasicServerData.xaml
+++ b/LANPaint Server/BasicServerData.xaml
@@ -1,17 +1,20 @@
 ﻿<Window x:Class="LANPaint_Server.BasicServerData"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:ext="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
         Title="Basic Server Properties" Height="178" Width="300">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
+        <ext:DoubleUpDown x:Name="xSize" Margin="36,72,10,49"/>
         <Label Content="Name" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="nameTextBox" Height="23" Margin="94,10,10,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="Paint server" Grid.ColumnSpan="2"/>
         <Label Content="Canvas size" HorizontalAlignment="Left" Margin="14,41,0,0" VerticalAlignment="Top"/>
         <Label Content="X" HorizontalAlignment="Left" Margin="14,72,0,0" VerticalAlignment="Top"/>
         <Label Content="Y" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" Grid.Column="1"/>
         <Button x:Name="startButton" Content="Start server" HorizontalAlignment="Left" Margin="10,112,0,10" Width="272" Grid.ColumnSpan="2" Click="startButton_Click"/>
+        <ext:DoubleUpDown x:Name="ySize" Margin="32,72,14,49" Grid.Column="1"/>
     </Grid>
 </Window>
